syntax = "proto3";

package enums;

option go_package = "github.com/yamato0204/grpc-card-server/pkg/pb/enums";

// CardRarityType
enum CardRarityType {
  CARD_RARITY_TYPE_UNSPECIFIED = 0;
  CARD_RARITY_TYPE_RARITY_1 = 1;
  CARD_RARITY_TYPE_RARITY_2 = 2;
  CARD_RARITY_TYPE_RARITY_3 = 3;
}
