syntax = "proto3";

package master;

import "enums/card_rarity_type.proto";

option go_package = "github.com/yamato0204/grpc-card-server/pkg/pb/master";

// Card
message Card {
  uint32 id = 1;
  string name = 2;
  enums.CardRarityType rarity_type = 3;
  uint32 character_id = 4;
}
